Registration updates, reset core and cleanup